// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingWarning 3 devices, no subscription Renders the component 1`] = `
<fragment-stub>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`BillingWarning 3 devices, with subscription Renders the component 1`] = `
<fragment-stub>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingWarning Less than 3 devices, no subscription Renders the component 1`] = `
<fragment-stub>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingWarning Not the owner Renders the component 1`] = `
<fragment-stub>
  <!---->
</fragment-stub>
`;
